--- a/project-web-app/src/app/beandau-notification/beandau-notification.component.html
+++ b/project-web-app/src/app/beandau-notification/beandau-notification.component.html
@@ -2,6 +2,7 @@
   class="app-notification"
   [class.visible]="isVisible"
   [class.error]="isError"
+  [class.auth]="isauth"
 >
   {{ message }}
 </div>
