--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -19,7 +19,10 @@
           </div>
         </li>
         <li class="header__item">
-          <a *ngIf="isAuthenticated" (click)="goToCommunityPage()"
+          <a
+            *ngIf="isAuthenticated"
+            (click)="goToCommunityPage()"
+            style="color: white"
             >Break-Community</a
           >
         </li>
