--- a/project-web-app/src/app/profile/profile.component.css
+++ b/project-web-app/src/app/profile/profile.component.css
@@ -44,10 +44,6 @@
   margin-left: 20px;
 }
 
-.content {
-  /* Ajoutez des styles pour le contenu si nécessaire */
-}
-
 .label {
   display: block;
   margin-bottom: 8px;
@@ -72,4 +68,38 @@ button {
   border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+}
+
+/*preferences*/
+
+.profile-field {
+  margin: 20px;
+  padding: 20px;
+}
+
+.label {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  color: white;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
