--- a/project-web-app/src/app/profile/profile.component.css
+++ b/project-web-app/src/app/profile/profile.component.css
@@ -1,105 +1,137 @@
 /* profile.component.css */
+
 .profile-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
   overflow: hidden;
-  max-width: 700px;
+  max-width: 800px;
   margin: auto;
   margin-top: 40px;
   margin-bottom: 40px;
-  position: relative;
-}
-
-.menu-container,
-.content-container {
-  border-radius: 10px;
-  border: 1px solid rgb(11, 11, 11);
-  overflow: hidden;
-  background-color: rgba(44, 44, 44, 0.8);
 }
 
 .menu-container {
-  width: 150px;
+  margin-left: 20px;
+  background-color: #acacac;
+  position: fixed;
+  left: 0;
+  overflow-y: auto;
+  z-index: 1;
+}
+
+.content-container {
+  flex-grow: 1;
+  margin-left: 240px;
+  padding: 20px;
 }
 
 .menu {
-  color: #fff;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.menu-item.selected {
+  color: rgb(0, 179, 255);
+  background-color: #101010;
 }
 
 .menu-item {
   cursor: pointer;
-  padding: 10px;
+  padding: 15px;
   transition: background-color 0.3s ease;
+  border-bottom: 1px solid #ccc;
 }
 
 .menu-item:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  background-color: #424242;
 }
 
 .content-container {
   flex-grow: 1;
   margin-left: 20px;
+  padding: 20px;
 }
 
 .label {
   display: block;
   margin-bottom: 8px;
-  color: white;
+  color: #ffffff;
 }
 
-input,
-select {
+.input-field,
+.select-field {
   width: 100%;
-  padding: 10px;
+  padding: 12px;
   box-sizing: border-box;
   border: 1px solid #ccc;
-  border-radius: 4px;
-  transition: border-color 0.3s ease;
+  border-radius: 5px;
+  margin-bottom: 15px;
 }
 
 button {
-  background-color: rgb(0, 126, 255);
-  color: #fff;
-  padding: 10px 15px;
   border: none;
-  border-radius: 30px;
+  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
-/*preferences*/
-
-.profile-field {
-  margin: 20px;
-  padding: 20px;
-}
-
-.label {
+.update-btn {
   font-weight: bold;
-  font-size: 18px;
-  margin-bottom: 10px;
-  display: block;
+  background-color: #00b806;
+  color: #000000;
+  margin-top: 20px;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
+/*table*/
+.crypto-table-container {
   color: white;
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
+  margin-top: 15px;
 }
 
-button {
-  margin-left: 10px;
-  padding: 5px 10px;
+.crypto-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.crypto-table th,
+.crypto-table td {
+  border: 1px solid #ddd;
+  padding: 12px;
+  text-align: left;
+}
+
+.crypto-table th {
+  background-color: #191919;
+}
+
+.crypto-row:hover {
+  background-color: #000000;
+  transition: 1s;
+}
+
+.action-btn {
+  padding: 8px 12px;
+  margin: 5px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.delete-btn {
+  background-color: #98180a;
+  color: #fff;
+}
+
+.add-btn {
+  background-color: #0c67a4;
+  color: #fff;
+}
+
+.action-btn:hover {
+  filter: brightness(90%);
 }
