--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="logo">CryptoBreak</h1>
+  <h1 class="logo" (click)="goToHomePage()">CryptoBreak</h1>
   <input type="checkbox" class="nav-toggle" id="nav-toggle" />
   <nav>
     <ul>
@@ -53,37 +53,47 @@
 <router-outlet></router-outlet>
 
 <div class="footer-dark">
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-md-3 item">
-          <h3>CryptoBreak</h3>
-          <ul>
-            <li><a (click)="goToCryptoCurrencyListPage()">Crypto-Center</a></li>
-            <li><a (click)="goToNewsPage()">News/Updates</a></li>
-            <li><a (click)="goToWalletPage()">Wallet</a></li>
-            <li><a (click)="goToAboutPage()">About</a></li>
-          </ul>
-        </div>
-        <div class="col-md-6 item text">
-          <h3>Company Name</h3>
-          <p>
-            Explore the world of cryptocurrencies with CryptoBreak! Stay
-            informed with real-time market data, news updates, and connect with
-            fellow enthusiasts in our community forum. Make smart decisions in
-            the ever-evolving crypto landscape. 🚀💰 #CryptoBreak
-            #Cryptocurrency
-          </p>
-        </div>
-        <div class="col item social">
-          <h3>Contact Us</h3>
-          <a href="#"><i class="icon ion-social-facebook"></i></a
-          ><a href="#"><i class="icon ion-social-twitter"></i></a
-          ><a href="#"><i class="icon ion-social-snapchat"></i></a
-          ><a href="#"><i class="icon ion-social-instagram"></i></a>
-        </div>
+  <footer class="footer">
+    <div class="footer-left col-md-4 col-sm-6">
+      <p class="about">
+        <span> CryptoBreak</span> Explore the world of cryptocurrencies with
+        CryptoBreak! Stay informed with real-time market data, news updates, and
+        connect with fellow enthusiasts in our community forum. Make smart
+        decisions in the ever-evolving crypto landscape. 🚀💰 #CryptoBreak
+        #Cryptocurrency
+      </p>
+    </div>
+    <div class="footer-center col-md-4 col-sm-6">
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p>Paris, France</p>
       </div>
-      <p class="copyright" style="margin-left: 40px">CryptoBreak © 2024</p>
+      <div class="social-icons">
+        <!-- Ajoutez vos logos de réseaux sociaux ici -->
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+        <!-- Ajoutez autant d'icônes que nécessaire pour vos réseaux sociaux -->
+      </div>
+    </div>
+
+    <div class="footer-right col-md-4 col-sm-6">
+      <h2>Crypto<span>Break</span></h2>
+      <p class="menu">
+        <a (click)="goToHomePage()" style="color: white">Home</a> |
+        <a (click)="goToCryptoCurrencyListPage()">Crypto-Center</a> |
+        <a (click)="goToNewsPage()">News/Updates</a> |
+        <a (click)="goToWalletPage()">Wallet</a>|
+        <a
+          *ngIf="isAuthenticated"
+          (click)="goToCommunityPage()"
+          style="color: white"
+          >Break-Community</a
+        >
+        |
+        <a (click)="goToAboutPage()" style="color: white">About</a>
+      </p>
+      <p class="name">CryptoBreak &copy; 2024</p>
     </div>
   </footer>
 </div>
