--- a/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
+++ b/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
@@ -209,3 +209,11 @@ div.mat-mdc-paginator-range-actions {
 .label {
   font-weight: bold;
 }
+
+.blue-text {
+  background-color: blue;
+}
+
+.red-text {
+  background-color: red;
+}
